Re-format test class